CSS: Autogenerate vendor prefixes (#1766)
* Remove CSS vendor prefixes

* Remove some more vendor prefixes

* Remove @ based vendor prefixes

* Final vendor prefix fixes

* Remove all selector vendor prefixes

Co-authored-by: Will Eastcott <will@playcanvas.com>

--- a/editor-ui/sass/_launch.scss
+++ b/editor-ui/sass/_launch.scss
@@ -151,11 +151,6 @@ canvas:focus {
 }
 
 .noSelect {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
     user-select: none;
 }
 
@@ -184,8 +179,7 @@ body > #dev-tools {
     border-top: 1px solid #202020;
 
     &.dragging {
-        cursor: -webkit-grabbing;
-        cursor: -moz-grabbing;
+        cursor: grabbing;
     }
 
     > .overview {
